cluster/apps/networking/vpn-gateway/networkpolicy.yaml
# NetworkPolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: downloads
spec:
  podSelector: {}
  ingress:
    - from:
        # Only allow ingress from K8S
        - ipBlock:
            cidr: 10.0.0.0/8
  egress:
    - to:
        # Only allow egress to K8S
        - ipBlock:
            cidr: 10.0.0.0/8
  policyTypes:
    - Ingress
    - Egress
